--- a/html/searchresult_template.htm
+++ b/html/searchresult_template.htm
@@ -69,6 +69,7 @@
                         <!-- $EndBlock winerow -->
                     </tbody>
                 </table>
+                <a class='toplink' href='#' title='Back to Top'>Back to Top</a> 
             </div>
         </div>
     </div>
