basic input validation implemented

--- a/html/searchresult_template.htm
+++ b/html/searchresult_template.htm
@@ -69,7 +69,9 @@
                         <!-- $EndBlock winerow -->
                     </tbody>
                 </table>
+                <!-- $BeginBlock totop -->
                 <a class='toplink' href='#' title='Back to Top'>Back to Top</a> 
+                <!-- $EndBlock totop -->
             </div>
         </div>
     </div>
