--- a/html/errorpage_template.htm
+++ b/html/errorpage_template.htm
@@ -23,9 +23,9 @@
 
   <body>
     <div class='container-fluid'>
-        <div class='centre-panel'>
-            <header class='sr-header'>
-                <h1><span class='fancy'>The Wine Store</span></h1>
+        <div class='centre-panel row'>
+            <header>
+                <h1>The Wine Store</h1>
             </header>
             <div class='row error-report'>
 
@@ -36,7 +36,7 @@
                 <!-- $EndBlock errormessages -->
 
                 <br>
-                <a href='search.php'>Back to Search</a> 
+                <a class='ws-link' href='search.php'>Back to Search</a> 
             </div>
         </div>
     </div>
