--- a/html/searchresult_template.htm
+++ b/html/searchresult_template.htm
@@ -23,55 +23,56 @@
 
   <body>
     <div class='container-fluid'>
-        <div class='centre-panel'>
-            <header class='sr-header'>
-                <h1><span class='fancy'>The Wine Store</span></h1>
-            </header>
-            <div class='row'>
-                <table class="table col-md-12">
-                    
+        <div class='centre-panel row'>
+            <header>
+                <h1>The Wine Store</h1>
                     <!-- $BeginBlock numresults -->
-                    <caption>Your search returned ${numberOfResults} wines
-                        <a href='search.php'>Back to Search</a> 
-                    </caption>
+                    <p class='caption'>Your search returned ${numberOfResults} wines
+                        <a class='ws-link right' href='search.php'>Back to Search</a> 
+                    </p>
                     <!-- $EndBlock numresults -->
-                    <thead>
-                        <!-- $BeginBlock tablehead -->
-                        <tr>
-                            <th>ID</th>
-                            <th>Wine Name</th>
-                            <th>Variety</th>
-                            <th>Year</th>
-                            <th>Winery</th>
-                            <th>Region</th>
-                            <th>$ Minimum Cost</th>
-                            <th>Stock On Hand</th>
-                            <th>Bottles Ordered</th>
-                            <th>$ Total Sales</th>
-                        </tr>
-                        <!-- $EndBlock tablehead -->
-                    </thead>
-                    <tbody>
-                        <!-- $BeginBlock winerow -->
-                        <tr>
-                            <td>${ID}</td>
-                            <td>${Wine}</td>
-                            <td>${Variety}</td>
-                            <td>${Year}</td>
-                            <td>${Winery}</td>
-                            <td>${Region}</td>
-                            <td>${MinimumCost}</td>
-                            <td>${StockOnHand}</td>
-                            <td>${BottlesOrdered}</td>
-                            <td>${TotalSales}</td>
-                        </tr>
-                        <!-- $EndBlock winerow -->
-                    </tbody>
-                </table>
-                <!-- $BeginBlock totop -->
-                <a class='toplink' href='#' title='Back to Top'>Back to Top</a> 
-                <!-- $EndBlock totop -->
+            </header>
+        </div>
+        <div class='row'>
+            <table class="table col-md-12">
+                <thead>
+                    <!-- $BeginBlock tablehead -->
+                    <tr>
+                        <!-- <th>ID</th> -->
+                        <th>Wine Name</th>
+                        <th>Variety</th>
+                        <th>Year</th>
+                        <th>Winery</th>
+                        <th>Region</th>
+                        <th>$ Minimum Cost</th>
+                        <th>Stock On Hand</th>
+                        <th>Bottles Ordered</th>
+                        <th>$ Total Sales</th>
+                    </tr>
+                    <!-- $EndBlock tablehead -->
+                </thead>
+                <tbody>
+                    <!-- $BeginBlock winerow -->
+                    <tr>
+                        <!-- <td>${ID}</td> -->
+                        <td>${Wine}</td>
+                        <td>${Variety}</td>
+                        <td>${Year}</td>
+                        <td>${Winery}</td>
+                        <td>${Region}</td>
+                        <td>${MinimumCost}</td>
+                        <td>${StockOnHand}</td>
+                        <td>${BottlesOrdered}</td>
+                        <td>${TotalSales}</td>
+                    </tr>
+                    <!-- $EndBlock winerow -->
+                </tbody>
+            </table>
+            <!-- $BeginBlock totop -->
+            <div class='totop'>
+                <a class='ws-link right' href='#' title='Back to Top'>Back to Top</a> 
             </div>
+            <!-- $EndBlock totop -->
         </div>
     </div>
 
@@ -84,10 +85,6 @@
     <!-- https://github.com/jmosbech/StickyTableHeaders/blob/master/license.txt -->
     <script src="../js/jquery.stickytableheaders.min.js"></script>
     <script>
-        // adding filler rows
-        // for(var i = 0; i < 3; i++){
-        //   $('tbody tr').clone().appendTo('table');
-        // }
         var offset = $('.navbar').height();
         $("html:not(.legacy) table").stickyTableHeaders({fixedOffset: offset});
     </script>
