--- a/html/searchresult_template.htm
+++ b/html/searchresult_template.htm
@@ -1,93 +1,107 @@
 <!DOCTYPE html>
+
+<!-- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+RMIT School of Computer Science and Information Technology 
+CPT 375 Web Database Applications SP2 2015    
+ASSIGNMENT 1   
+Alexandra Margaret Rodley s3372356
+
+searchresult_template.htm
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ -->
+
+<!-- basic html page from Twitter Bootstrap -->
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Wine Store Results</title>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <title>The Wine Store | Results</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
-    <!-- Bootstrap -->
-    <link href="../css/bootstrap.css" rel="stylesheet">
-    <link href="../css/bootstrap-theme.css" rel="stylesheet">
-    <link href="../css/winestore.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-  </head>
-
-  <body>
-    <div class='container-fluid'>
-        <div class='centre-panel row'>
-            <header>
-                <h1>The Wine Store</h1>
-                    <!-- $BeginBlock numresults -->
-                    <p class='caption'>Your search returned ${numberOfResults} wines
-                        <a class='ws-link right' href='search.php'>Back to Search</a> 
-                    </p>
-                    <!-- $EndBlock numresults -->
-            </header>
-        </div>
-        <div class='row'>
-            <table class="table col-md-12">
-                <thead>
-                    <!-- $BeginBlock tablehead -->
-                    <tr>
-                        <!-- <th>ID</th> -->
-                        <th>Wine Name</th>
-                        <th>Variety</th>
-                        <th>Year</th>
-                        <th>Winery</th>
-                        <th>Region</th>
-                        <th>$ Minimum Cost</th>
-                        <th>Stock On Hand</th>
-                        <th>Bottles Ordered</th>
-                        <th>$ Total Sales</th>
-                    </tr>
-                    <!-- $EndBlock tablehead -->
-                </thead>
-                <tbody>
-                    <!-- $BeginBlock winerow -->
-                    <tr>
-                        <!-- <td>${ID}</td> -->
-                        <td>${Wine}</td>
-                        <td>${Variety}</td>
-                        <td>${Year}</td>
-                        <td>${Winery}</td>
-                        <td>${Region}</td>
-                        <td>${MinimumCost}</td>
-                        <td>${StockOnHand}</td>
-                        <td>${BottlesOrdered}</td>
-                        <td>${TotalSales}</td>
-                    </tr>
-                    <!-- $EndBlock winerow -->
-                </tbody>
-            </table>
-            <!-- $BeginBlock totop -->
-            <div class='totop'>
-                <a class='ws-link right' href='#' title='Back to Top'>Back to Top</a> 
+        <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+        <!-- Bootstrap -->
+        <link href="../css/bootstrap.css" rel="stylesheet">
+        <!-- <link href="../css/bootstrap-theme.css" rel="stylesheet"> -->
+        <link href="../css/winestore.css" rel="stylesheet">
+        <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <div class='container-fluid'>
+            <div class='centre-panel row'>
+                <header>
+                    <h1>The Wine Store</h1>
+                        <!-- $BeginBlock numresults -->
+                        <p class='caption'>Your search returned ${numberOfResults} wines
+                            <a class='ws-link right' href='search.php'>Back to Search</a> 
+                        </p>
+                        <!-- $EndBlock numresults -->
+                </header>
             </div>
-            <!-- $EndBlock totop -->
+            <div class='row'>
+                <table class="table col-md-12">
+                    <thead>
+                        <!-- $BeginBlock tablehead -->
+                        <tr>
+                            <!-- <th>ID</th> -->
+                            <th>Wine Name</th>
+                            <th>Variety</th>
+                            <th>Year</th>
+                            <th>Winery</th>
+                            <th>Region</th>
+                            <th>$ Minimum Cost</th>
+                            <th>Stock On Hand</th>
+                            <th>Bottles Ordered</th>
+                            <th>$ Total Sales</th>
+                        </tr>
+                        <!-- $EndBlock tablehead -->
+                    </thead>
+                    <tbody>
+                        <!-- $BeginBlock winerow -->
+                        <tr>
+                            <!-- <td>${ID}</td> -->
+                            <td>${Wine}</td>
+                            <td>${Variety}</td>
+                            <td>${Year}</td>
+                            <td>${Winery}</td>
+                            <td>${Region}</td>
+                            <td>${MinimumCost}</td>
+                            <td>${StockOnHand}</td>
+                            <td>${BottlesOrdered}</td>
+                            <td>${TotalSales}</td>
+                        </tr>
+                        <!-- $EndBlock winerow -->
+                    </tbody>
+                </table>
+                <!-- $BeginBlock totop -->
+                <div class='totop'>
+                    <a class='ws-link right' href='#' title='Back to Top'>Back to Top</a> 
+                </div>
+                <!-- $EndBlock totop -->
+            </div>
         </div>
-    </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="../js/bootstrap.js"></script>
+        <!-- jQuery for StickyTableHeaders -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <!-- Sticky Table Headers Plugin (c) 2011 Jonas Mosbech -->
-    <!-- https://github.com/jmosbech/StickyTableHeaders/blob/master/license.txt -->
-    <script src="../js/jquery.stickytableheaders.min.js"></script>
-    <script>
-        var offset = $('.navbar').height();
-        $("html:not(.legacy) table").stickyTableHeaders({fixedOffset: offset});
-    </script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <!-- <script src="../js/bootstrap.js"></script> -->
 
-  </body>
+        <!-- Sticky Table Headers Plugin (c) 2011 Jonas Mosbech -->
+        <!-- https://github.com/jmosbech/StickyTableHeaders/blob/master/license.txt -->
+        <script src="../js/jquery.stickytableheaders.min.js"></script>
+        <script>
+            var offset = $('.navbar').height();
+            $("html:not(.legacy) table").stickyTableHeaders({fixedOffset: offset});
+        </script>
+        <!-- Validated HTML5 -->
+    </body>
 </html>
+
+
+
+
